@@ -2,7 +2,8 @@ import org.junit.Test;
 
 import java.util.*;
 
-public class ThreeSum {
+// https://leetcode.cn/problems/3sum
+public class Sum3 {
     // [-4, -3, -2, -1, -1, 0, 0, 1, 2, 3, 4]
     public List<List<Integer>> threeSum(int[] nums) {
         List<List<Integer>> ans = new ArrayList<>();
@@ -13,7 +14,7 @@ public class ThreeSum {
                 continue;
             }
 
-            int third = len-1;
+            int third = len - 1;
             int n = -nums[first];
             for (int second = first + 1; second < len; second++) {
                 if (second > first + 1 && nums[second] == nums[second - 1]) {
@@ -38,31 +39,39 @@ public class ThreeSum {
         return ans;
     }
 
-    public List<List<Integer>> threeSumWrong(int[] nums) {
-        Set<List<Integer>> ans = new HashSet<>();
+    public List<List<Integer>> threeSum2(int[] nums) {
+        List<List<Integer>> ans = new ArrayList<>();
         Arrays.sort(nums);
         int len = nums.length;
-        int l = 0;
-        int r = len - 1;
-        while (r > l) {
-            int n = -(nums[r] + nums[l]);
-            int index = binary(nums, n, l, r);
-            if (index > -1) {
-                List<Integer> set = Arrays.asList(nums[l], nums[index], nums[r]);
-                ans.add(set);
-                if (index - l < r -index) {
+        for (int i = 0; i < len - 2; i++) {
+            if (i > 0 && nums[i] == nums[i - 1]) continue;
+            if (nums[i] + nums[i + 1] + nums[i + 2] > 0) break;
+            if (nums[i] + nums[len - 2] + nums[len - 1] < 0) continue;
+
+            int cur = -nums[i];
+            int l = i + 1;
+            int r = len - 1;
+            while (l < r) {
+                if (nums[l] + nums[r] == cur) {
+                    ans.add(List.of(nums[i], nums[l], nums[r]));
+                    l++;
+                    while (l < r && nums[l] == nums[l - 1]) {
+                        l++;
+                    }
                     r--;
-                } else {
+                    while (l < r && nums[r] == nums[r + 1]) {
+                        r--;
+                    }
+                }
+                if (nums[l] + nums[r] > cur) {
+                    r--;
+                }
+                if (nums[l] + nums[r] < cur) {
                     l++;
                 }
-            } else if (index == -2) {
-                l++;
-            } else if (index == -1) {
-                r--;
             }
         }
-
-        return new ArrayList<>(ans);
+        return ans;
     }
 
     public int binary(int[] nums, int n, int l, int r) {
@@ -80,6 +89,6 @@ public class ThreeSum {
 
     @Test
     public void test() {
-        System.out.println(threeSum(new int[]{-1,0,1,2,-1,-4,-2,-3,3,0,4}));
+        System.out.println(threeSum2(new int[]{-1, 0, 1, 2, -1, -4, -2, -3, 3, 0, 4}));
     }
 }
